Bug 445141 - Battery of bluetooth device not being shown
Summary: Battery of bluetooth device not being shown
Status: RESOLVED FIXED
Alias: None
Product: Bluedevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.23.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-07 22:41 UTC by Matt
Modified: 2021-11-09 16:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.89
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt 2021-11-07 22:41:46 UTC
SUMMARY


STEPS TO REPRODUCE
1. Enable bluez experimental mode
2. Connect device with battery indicator via bluetooth

OBSERVED RESULT

Battery level of device is not shown in energy screen of plasma info centre, nor in the battery widget (not sure what this is called). It is shown correctly in the bluetooth widget and with upower -d.

EXPECTED RESULT

Battery level of device is shown in the energy screen of the plasma info centre and in the battery widget.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Bluez Version: 5.82.1
Bluedevil Version: 5.23.2
Upower Version: 0.99.13.1

ADDITIONAL INFORMATION
I think the experimental bluez battery API is being used for battery indicator levels. Not sure if it's relevant, but I'm testing with Sony WH-1000XM4s and I'm using pipewire.

Not sure if this is filed under the right component, feel free to let me know if it's not! :)
Comment 1 Nicolas Fella 2021-11-08 23:42:37 UTC
I'd say this is something missing in upwer/solid and/or powerdevil
Comment 2 Matt 2021-11-08 23:47:45 UTC
(In reply to Nicolas Fella from comment #1)
> I'd say this is something missing in upwer/solid and/or powerdevil
Is there anything I can do to help work out which? Perfectly happy to try some diagnostics/send logs/etc.
Comment 3 Bug Janitor Service 2021-11-09 01:15:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/solid/-/merge_requests/57
Comment 4 Nicolas Fella 2021-11-09 12:08:20 UTC
Git commit 4080451c02d9f5b451c91e9dd3a5096dfb977096 by Nicolas Fella.
Committed on 09/11/2021 at 01:14.
Pushed by nicolasfella into branch 'master'.

[upower] Consider audio devices and generic bluetooth devices to be batteries

M  +4    -0    src/solid/devices/backends/upower/upowerdevice.cpp

https://invent.kde.org/frameworks/solid/commit/4080451c02d9f5b451c91e9dd3a5096dfb977096