[upower] Consider audio devices and generic bluetooth devices to be batteries

BUG: 445141