src/solid/devices/backends/upower/upowerdevice.cpp
@@ -87,6 +87,10 @@ bool UPowerDevice::queryDeviceInterface(const Solid::DeviceInterface::Type &type
         case UP_DEVICE_KIND_PDA:
         case UP_DEVICE_KIND_PHONE:
         case UP_DEVICE_KIND_GAMING_INPUT:
+        case UP_DEVICE_KIND_SPEAKERS:
+        case UP_DEVICE_KIND_HEADSET:
+        case UP_DEVICE_KIND_HEADPHONES:
+        case UP_DEVICE_KIND_BLUETOOTH_GENERIC:
             return true;
         case UP_DEVICE_KIND_UNKNOWN:
             // There is currently no "Bluetooth battery" type, so check if it comes from Bluez
